--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
                         <div class="contact-icon">📧</div>
                         <div>
                             <div style="font-weight: bold;">Email</div>
-                            <div style="color: #4b5563;">ishaan.dixit@example.com</div>
+                            <div style="color: #4b5563;">dixitji.ishaan@gmail.com</div>
                         </div>
                     </div>
                     
@@ -814,7 +814,7 @@
                         <div class="contact-icon">📞</div>
                         <div>
                             <div style="font-weight: bold;">Phone</div>
-                            <div style="color: #4b5563;">(555) 123-4567</div>
+                            <div style="color: #4b5563;">(561) 421-7899</div>
                         </div>
                     </div>
                     
@@ -860,7 +860,7 @@
                 <a href="#" class="social-link">📧</a>
             </div>
             <hr class="footer-divider">
-            <div class="footer-copyright">© 2025 Ishaan Dixit. All rights reserved.</div>
+            <div class="footer-copyright"></div>
         </div>
     </footer>
 
