--- a/index.html
+++ b/index.html
@@ -783,11 +783,11 @@
                     <div class="achievement-header">
                         <div class="achievement-icon">👥</div>
                         <div>
-                            <div class="achievement-title">DECA Leadership</div>
+                            <div class="achievement-title">ICDC Qualifier - State Champion</div>
                             <div class="achievement-org">DECA Inc.</div>
                         </div>
                     </div>
-                    <p>Recognized for outstanding leadership and business acumen through active participation in DECA competitions and chapter management.</p>
+                    <p>Top 8 Competitors in Florida for the Hospitality and Tourism Professional Selling Event. Qualifier for the International Career Development Conference.</p>
                 </div>
             </div>
         </div>
