--- a/index.html
+++ b/index.html
@@ -773,11 +773,11 @@
                     <div class="achievement-header">
                         <div class="achievement-icon">📈</div>
                         <div>
-                            <div class="achievement-title">Google Analytics Certified</div>
+                            <div class="achievement-title">Fundamentals of Digital Marketing</div>
                             <div class="achievement-org">Google</div>
                         </div>
                     </div>
-                    <p>Completed comprehensive training in Google Analytics, demonstrating proficiency in data analysis, reporting, and digital marketing metrics.</p>
+                    <p>Completed comprehensive training through Google, demonstrating proficiency in data analysis, reporting, and digital marketing metrics.</p>
                 </div>
 
                 <div class="achievement-card">
