--- a/index.html
+++ b/index.html
@@ -782,13 +782,13 @@
 
                 <div class="achievement-card">
                     <div class="achievement-header">
-                        <div class="achievement-icon">💼</div>
+                        <div class="achievement-icon">💵</div>
                         <div>
-                            <div class="achievement-title">HubSpot Marketing Certified</div>
-                            <div class="achievement-org">HubSpot</div>
+                            <div class="achievement-title">Quickbooks Certified User</div>
+                            <div class="achievement-org">Intuit</div>
                         </div>
                     </div>
-                    <p>Earned certification in inbound marketing, content strategy, and customer relationship management through HubSpot's comprehensive marketing program.</p>
+                    <p>Earned certification in financial accounting, demonstrating proficiency in cloud-based accounting, financial management, and bookkeeping through hands-on application of industry-standard tools.</p>
                 </div>
 
                 
