--- a/index.html
+++ b/index.html
@@ -841,9 +841,10 @@
             <div class="footer-title">Ishaan Dixit</div>
             <div class="footer-subtitle">Aspiring Business Leader | Eagle Scout | Making a Positive Impact</div>
             <div class="social-links">
-                <a href="#" class="social-link">LI</a>
-                <a href="#" class="social-link">GH</a>
-                <a href="#" class="social-link">📧</a>
+                <a href="https://www.linkedin.com/in/ishaan-dixit" class="social-link">LI</a>
+                <a href="mailto:dixitji.ishaan@gmail.com" class="social-link">📧</a>
+                <a href="https://www.credly.com/users/ishaan-dixit/edit#credly" class="social-link">CR</a>
+                
             </div>
             <hr class="footer-divider">
             <div class="footer-copyright"></div>
