--- a/index.html
+++ b/index.html
@@ -841,10 +841,17 @@
             <div class="footer-title">Ishaan Dixit</div>
             <div class="footer-subtitle">Aspiring Business Leader | Eagle Scout | Making a Positive Impact</div>
             <div class="social-links">
-                <a href="https://www.linkedin.com/in/ishaan-dixit" class="social-link">LI</a>
-                <a href="mailto:dixitji.ishaan@gmail.com" class="social-link">📧</a>
-                <a href="https://www.credly.com/users/ishaan-dixit/edit#credly" class="social-link">CR</a>
+                <a href="https://www.linkedin.com/in/ishaan-dixit" class="social-link" target="_blank">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn" style="width: 20px; height: 20px;">
+                </a>
                 
+                <a href="mailto:dixitji.ishaan@gmail.com" class="social-link">
+                    📧
+                </a>
+                
+                <a href="https://www.credly.com/users/ishaan-dixit/edit#credly" class="social-link" target="_blank">
+                    <img src="https://images.credly.com/images/brand-assets/credly-icon.svg" alt="Credly" style="width: 20px; height: 20px;">
+                </a>
             </div>
             <hr class="footer-divider">
             <div class="footer-copyright"></div>
