--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@
                 </a>
                 
                 <a href="https://www.credly.com/users/ishaan-dixit/edit#credly" class="social-link" target="_blank">
-                    <img src="https://images.credly.com/images/brand-assets/credly-icon.svg" alt="Credly" style="width: 20px; height: 20px;">
+                    <img src="https://www.svgviewer.dev/static-svgs/34436/credly.svg" alt="Credly" style="width: 20px; height: 20px;">
                 </a>
             </div>
             <hr class="footer-divider">
