--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@
                     📧
                 </a>
                 
-                <a href="https://www.credly.com/users/ishaan-dixit/edit#credly" class="social-link" target="_blank">
+                <a href="https://www.credly.com/users/ishaan-dixit" class="social-link" target="_blank">
                     <img src="https://www.svgviewer.dev/static-svgs/34436/credly.svg" alt="Credly" style="width: 20px; height: 20px;">
                 </a>
             </div>
