--- a/index.html
+++ b/index.html
@@ -790,8 +790,39 @@
                     </div>
                     <p>Earned certification in financial accounting, demonstrating proficiency in cloud-based accounting, financial management, and bookkeeping through hands-on application of industry-standard tools.</p>
                 </div>
-
                 
+                <div class="achievement-card">
+                    <div class="achievement-header">
+                        <div class="achievement-icon">💵</div>
+                        <div>
+                            <div class="achievement-title">ESB: Entrepreneurship & Small Business</div>
+                            <div class="achievement-org">Certiport</div>
+                        </div>
+                    </div>
+                    <p>Earned the ESB: Entrepreneurship and Small Business certification, demonstrating knowledge of core business principles, entrepreneurial concepts, and the skills needed to start, manage, and grow a small business.</p>
+                </div>
+
+                <div class="achievement-card">
+                    <div class="achievement-header">
+                        <div class="achievement-icon">📊</div>
+                        <div>
+                            <div class="achievement-title">Microsoft Office Specialist</div>
+                            <div class="achievement-org">Microsoft</div>
+                        </div>
+                    </div>
+                    <p>Earned Microsoft Office Specialist certification, demonstrating advanced proficiency in Microsoft Word, Excel, and PowerPoint through hands-on application of productivity, document creation, and data management skills.</p>
+                </div>
+
+                <div class="achievement-card">
+                    <div class="achievement-header">
+                        <div class="achievement-icon">💻</div>
+                        <div>
+                            <div class="achievement-title">MTA: Intro to Programming Using Python</div>
+                            <div class="achievement-org">Microsoft</div>
+                        </div>
+                    </div>
+                    <p>Earned the MTA: Introduction to Programming Using Python certification, demonstrating foundational knowledge of programming concepts, problem-solving, and application development through practical coding experience in Python.</p>
+                </div>
             </div>
         </div>
     </section>
