--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
                 
                 <div class="achievement-card">
                     <div class="achievement-header">
-                        <div class="achievement-icon">💵</div>
+                        <div class="achievement-icon">👨‍💼</div>
                         <div>
                             <div class="achievement-title">ESB: Entrepreneurship & Small Business</div>
                             <div class="achievement-org">Certiport</div>
@@ -822,6 +822,18 @@
                         </div>
                     </div>
                     <p>Earned the MTA: Introduction to Programming Using Python certification, demonstrating foundational knowledge of programming concepts, problem-solving, and application development through practical coding experience in Python.</p>
+                </div>
+
+
+                <div class="achievement-card">
+                    <div class="achievement-header">
+                        <div class="achievement-icon">❤️</div>
+                        <div>
+                            <div class="achievement-title">CPR Certified</div>
+                            <div class="achievement-org">American Heart Association</div>
+                        </div>
+                    </div>
+                    <p>Earned CPR Certification, demonstrating the ability to respond to medical emergencies with life-saving techniques, including chest compressions, rescue breathing, and basic first aid in critical situations.</p>
                 </div>
             </div>
         </div>
