--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
-                <img src="headshot.jpg" alt="Ishaan Dixit" class="profile-img">
+                <img src="headshot.png" alt="Ishaan Dixit" class="profile-img">
                 <h1>Ishaan Dixit</h1>
                 <div>
                     <span class="badge">🏆 Eagle Scout</span>
@@ -552,7 +552,7 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-grid">
                 <div>
-                    <img src="headshot.jpg" alt="Ishaan Dixit" class="about-img">
+                    <img src="headshot.png" alt="Ishaan Dixit" class="about-img">
                 </div>
                 <div>
                     <h3 style="color: #3b82f6; font-size: 1.5rem; margin-bottom: 1rem;">Aspiring Business Leader & Eagle Scout</h3>
