--- a/experience.html
+++ b/experience.html
@@ -606,5 +606,43 @@
               </div>
           </div>
       </section>
+       <!-- Footer -->
+      <footer>
+          <div class="container">
+              <div class="footer-title">Ishaan Dixit</div>
+              <div class="footer-subtitle">Aspiring Business Leader | Eagle Scout | Making a Positive Impact</div>
+              <div class="social-links">
+                  <a href="https://www.linkedin.com/in/ishaan-dixit" class="social-link" target="_blank">
+                      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn" style="width: 20px; height: 20px;">
+                  </a>
+                  
+                  <a href="mailto:dixitji.ishaan@gmail.com" class="social-link">
+                      📧
+                  </a>
+                  
+                  <a href="https://www.credly.com/users/ishaan-dixit" class="social-link" target="_blank">
+                      <img src="https://www.svgviewer.dev/static-svgs/34436/credly.svg" alt="Credly" style="width: 20px; height: 20px;">
+                  </a>
+              </div>
+              <hr class="footer-divider">
+              <div class="footer-copyright"></div>
+          </div>
+      </footer>
+  
+      <script>
+          // Smooth scrolling
+          document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+              anchor.addEventListener('click', function (e) {
+                  e.preventDefault();
+                  const target = document.querySelector(this.getAttribute('href'));
+                  if (target) {
+                      target.scrollIntoView({
+                          behavior: 'smooth',
+                          block: 'start'
+                      });
+                  }
+              });
+          });
+      </script>
     </body>
 </html>
