--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                 <div class="nav-links">
                     <a href="#home">Home</a>
                     <a href="#about">About</a>
-                    <a href="#experience">Experience</a>
+                    <a href="experience.html">Experience</a>
                     <a href="#skills">Skills</a>
                     <a href="#achievements">Achievements</a>
                     <a href="#contact">Contact</a>
