--- a/experience.html
+++ b/experience.html
@@ -519,8 +519,8 @@
               <div class="nav-container">
                   <div class="logo">Ishaan Dixit</div>
                   <div class="nav-links">
-                      <a href="#home">Home</a>
-                      <a href="#about">About</a>
+                      <a href="index.html">Home</a>
+                      <a href="index.html#about">About</a>
                       <a href="experience.html">Experience</a>
                       <a href="#skills">Skills</a>
                       <a href="#achievements">Achievements</a>
