--- a/experience.html
+++ b/experience.html
@@ -529,6 +529,22 @@
               </div>
           </div>
       </nav>
+
+       <!-- Hero Section -->
+      <section id="home" class="hero">
+          <div class="container">
+              <div class="hero-content">
+                  <img src="headshot.png" alt="Ishaan Dixit" class="profile-img">
+                  <h1>Ishaan Dixit</h1>
+                  <div>
+                      <span class="badge">🏆 Eagle Scout</span>
+                      <span class="badge">Business Management & Data Analysis</span>
+                  </div>
+                  <p>Director of North American Operations at 2cousins | DECA Executive Officer | Passionate about leadership, marketing, and making a positive impact</p>
+                  <a href="index.html#contact" class="btn">Get In Touch</a>
+              </div>
+          </div>
+      </section>
       <!-- Experience Section -->
       <section id="experience" class="section">
           <div class="container">
