--- a/index.html
+++ b/index.html
@@ -522,6 +522,7 @@
                     <a href="#home">Home</a>
                     <a href="#about">About</a>
                     <a href="experience.html">Experience</a>
+                    <a href="projects.html">Projects</a>
                     <a href="#skills">Skills</a>
                     <a href="#achievements">Achievements</a>
                     <a href="#contact">Contact</a>
