--- a/experience.html
+++ b/experience.html
@@ -522,6 +522,7 @@
                       <a href="index.html">Home</a>
                       <a href="index.html#about">About</a>
                       <a href="experience.html">Experience</a>
+                      <a href="projects.html">Projects</a>
                       <a href="#skills">Skills</a>
                       <a href="#achievements">Achievements</a>
                       <a href="#contact">Contact</a>
