--- a/index.html
+++ b/index.html
@@ -523,9 +523,9 @@
                     <a href="#about">About</a>
                     <a href="experience.html">Experience</a>
                     <a href="projects.html">Projects</a>
-                    <a href="#skills">Skills</a>
-                    <a href="#achievements">Achievements</a>
-                    <a href="#contact">Contact</a>
+                    <a href="index.html#skills">Skills</a>
+                    <a href="index.html#achievements">Achievements</a>
+                    <a href="index.html#contact">Contact</a>
                 </div>
             </div>
         </div>
