--- a/projects.html
+++ b/projects.html
@@ -84,7 +84,7 @@
                     <a href="Hospitality and Tourism Professional Selling Presentation.pdf" target="_blank">
                         <img src="HTPS Selling.png" alt="Sustainable Hospitality" style="width:100%; border-radius: 10px; margin-bottom: 1rem;">
                     </a>
-                    <h3>Sustainable Hospitality Solutions</h3>
+                    <h3>DECA Hospitality and Tourism Professional Selling</h3>
                     <p>Crafted and delivered a compelling sales presentation to hotel executives, proposing innovative sustainable solution packages.</p>
                 </div>
             </div>
