--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                     <span class="badge">🏆 Eagle Scout</span>
                     <span class="badge">Business Management & Data Analysis</span>
                 </div>
-                <p>Director of North American Operations at 2cousins  Passionate about leadership, marketing, and making a positive impact</p>
+                <p>Director of North American Operations at 2cousins | Passionate about leadership, marketing, and making a positive impact</p>
                 <a href="#contact" class="btn">Get In Touch</a>
 <a href="Ishaan Dixit Resume (2).pdf" download class="btn btn-secondary" style="margin-left: 1rem;">Resume</a>
 
