--- a/projects.html
+++ b/projects.html
@@ -110,7 +110,7 @@
                         <img src="HTPS Selling.png" alt="Sustainable Hospitality" style="width:100%; border-radius: 10px; margin-bottom: 1rem;">
                     </a>
                     <h3>DECA Hospitality and Tourism Professional Selling</h3>
-                    <p>Crafted and delivered a compelling sales presentation to hotel executives, proposing innovative sustainable solution packages.</p>
+                    <p>Crafted and delivered a compelling sales presentation to for the DECA Career Development Conference 2025, proposing innovative sustainable solution packages.</p>
                 </div>
             </div>
         </div>
